--- a/style.css
+++ b/style.css
@@ -1,21 +1,13 @@
-ion-icon {
-    color:whitesmoke;
-    --ionicon-stroke-width: 80px;
+body {
+    font-family: 'Fira Sans', sans-serif;
   }
-
-.green{
-  background-color: green;
-}
-.yellow{
-  background-color: yellow;
-}
-.orange{
-  background-color: orange;
-}
-.red{
-  background-color: red;
-}
-
-.purple{
-  background-color: purple;
-}
+  
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    font-family: 'Merriweather', serif;
+    font-weight: 700;
+  }
